# kaggle_games_analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb  final_predictions_lr.ipynb  final_predictions_rf.ipynb  logistic_regression.ipynb  random_forest.ipynb
src/kaggle_games/: pipelines.py  split_data.py
